[gd_scene load_steps=25 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://scenes/Lake.tscn" type="PackedScene" id=3]
[ext_resource path="res://Wasser Plane.tres" type="PlaneMesh" id=4]
[ext_resource path="res://Level.gd" type="Script" id=5]
[ext_resource path="res://models/Palme.glb" type="PackedScene" id=6]
[ext_resource path="res://Camera.gd" type="Script" id=7]
[ext_resource path="res://models/mini-wakuwaku.otf" type="DynamicFontData" id=8]
[ext_resource path="res://materials/Logo_Cat.png" type="Texture" id=9]
[ext_resource path="res://models/Rock 02.glb" type="PackedScene" id=10]
[ext_resource path="res://models/Rock 03.glb" type="PackedScene" id=11]
[ext_resource path="res://models/Rock 01.glb" type="PackedScene" id=12]
[ext_resource path="res://materials/Logo_Fishing.png" type="Texture" id=13]

[sub_resource type="Environment" id=1]
background_mode = 2
ambient_light_color = Color( 1, 1, 1, 1 )
auto_exposure_enabled = true
auto_exposure_min_luma = 0.4
ss_reflections_enabled = true
ssao_enabled = true

[sub_resource type="ArrayMesh" id=2]
resource_local_to_scene = true

[sub_resource type="CylinderShape" id=3]
radius = 0.400503
height = 0.348728

[sub_resource type="CapsuleShape" id=4]
radius = 0.441441
height = 1.21168

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( -25.1366, 0.136612, -25.1366, -25.1366, 0.136612, 25.1366, 25.1366, 0.136612, -25.1366, 25.1366, 0.136612, 25.1366 )

[sub_resource type="ConcavePolygonShape" id=7]
data = PoolVector3Array( 25, 0, 25, -25, 0, 25, 25, 0, -25, -25, 0, 25, -25, 0, -25, 25, 0, -25 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.0235772, 1.11565, 0.318018 )

[sub_resource type="BoxShape" id=12]
extents = Vector3( 1, 2.68929, 1 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 0.340967, 4.11465, 0.505161 )

[sub_resource type="DynamicFont" id=10]
size = 50
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = null
Label/styles/normal = null

[node name="Level" type="Spatial"]
script = ExtResource( 5 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.940229, -18.4941 )
script = ExtResource( 2 )

[node name="Body" type="MeshInstance" parent="Player"]
mesh = SubResource( 2 )

[node name="Foot" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0819768, 0 )
shape = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.814837, 0 )
shape = SubResource( 4 )

[node name="CameraBase" type="Spatial" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6, 0 )

[node name="CameraRot" type="Spatial" parent="Player/CameraBase"]

[node name="SpringArm" type="SpringArm" parent="Player/CameraBase/CameraRot"]
transform = Transform( -1, -5.01437e-08, 7.16126e-08, 0, 0.819152, 0.573577, -8.74228e-08, 0.573577, -0.819152, 0, 0, 0 )
collision_mask = 2
spring_length = 12.0

[node name="Camera" type="Camera" parent="Player/CameraBase/CameraRot/SpringArm"]
transform = Transform( 1, -7.10543e-15, 4.9738e-14, 1.42109e-14, 1, 2.98023e-08, -1.42109e-14, -2.98023e-08, 1, 0.0111694, 0.0357237, -0.00182915 )
fov = 45.0
script = ExtResource( 7 )

[node name="PlayerModel" parent="Player" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.271318 )

[node name="Water" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0724921, -2.02549, 0.0716634 )
mesh = ExtResource( 4 )
material/0 = null

[node name="WaterBody" type="StaticBody" parent="Water"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2" type="CollisionShape" parent="Water/WaterBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.51586, 0 )
shape = SubResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Water/WaterBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
shape = SubResource( 7 )

[node name="Lake_Sculpt" parent="." instance=ExtResource( 3 )]

[node name="StaticBody" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.73312, 0, -4.25626 )
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2" type="CollisionShape" parent="StaticBody"]
transform = Transform( -5.46392e-06, 0, 125, 0, 20, 0, -125, 0, -5.46392e-06, -0.348297, 6.41969, 38.0503 )
shape = SubResource( 8 )

[node name="CollisionShape3" type="CollisionShape" parent="StaticBody"]
transform = Transform( -125, 0, -1.09278e-05, 0, 20, 0, 1.09278e-05, 0, -125, -37.8706, 6.41969, 1.49228 )
shape = SubResource( 8 )

[node name="CollisionShape4" type="CollisionShape" parent="StaticBody"]
transform = Transform( 1.49061e-06, 0, 125, 0, 20, 0, -125, 0, 1.49061e-06, -1.61174, 6.41969, -26.4957 )
shape = SubResource( 8 )

[node name="CollisionShape5" type="CollisionShape" parent="StaticBody"]
transform = Transform( 125, 0, 0, 0, 20, 0, 0, 0, 125, 35.2133, 6.41969, 10.7315 )
shape = SubResource( 8 )

[node name="WorldCollision" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.73312, 0, -4.25626 )

[node name="CollisionPolygon" type="CollisionPolygon" parent="WorldCollision"]
transform = Transform( 1.2, 0, 0, 0, -4.80825e-08, -10, 0, 1.1, -4.37114e-07, 0.903795, -0.857611, -0.379429 )
polygon = PoolVector2Array( 1.41, 8.676, 0.513, 11.69, -0.998519, 18.297, -3.46, 21.929, -7.108, 21.88, -11.263, 19.658, -12.3168, 17.2973, -12.3015, 12.0756, -12.771, 6.95, -12.407, 1.566, -10.197, -3.006, -6.539, -6.918, -3.268, -9.235, 2.171, -9.929, 8.542, -8.948, 13.829, -7.066, 14.991, -4.207, 14.409, 1.746, 12.3151, 4.09332, 5.929, 5.188 )

[node name="SpawnPoints" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0 )

[node name="02" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.12922, 0, -8.76182 )

[node name="01" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.56461, 0, 0 )

[node name="03" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.49617, 0, -8.76182 )

[node name="04" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.1873, 0, -0.29277 )

[node name="05" type="Spatial" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.50508, 0, 8.13704 )

[node name="Props" type="Spatial" parent="."]

[node name="Rock 02" parent="Props" instance=ExtResource( 12 )]
transform = Transform( 0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, 0.642788, 5.3915, -2.45201, -15.2481 )

[node name="StaticBody" type="StaticBody" parent="Props/Rock 02"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Rock 02/StaticBody"]
shape = SubResource( 12 )

[node name="Palme2" parent="Props" instance=ExtResource( 6 )]
transform = Transform( -0.315136, -0.0827148, 0.945435, 0, 0.996194, 0.0871557, -0.949047, 0.0274659, -0.313936, 24.53, 0, -10.146 )

[node name="StaticBody" type="StaticBody" parent="Props/Palme2"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Palme2/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.021847, -0.177929 )
shape = SubResource( 9 )

[node name="Palme" parent="Props" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 0.992546, 0.121869, 0, -0.121869, 0.992546, 7.01623, 0, 6.70582 )

[node name="StaticBody" type="StaticBody" parent="Props/Palme"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Palme/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.021847, -0.177929 )
shape = SubResource( 9 )

[node name="Palme3" parent="Props" instance=ExtResource( 6 )]
transform = Transform( 0.364828, -0.032494, 0.930507, 0, 0.99939, 0.0348995, -0.931075, -0.0127323, 0.364606, 20.7514, 0, -0.0580063 )

[node name="StaticBody" type="StaticBody" parent="Props/Palme3"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Palme3/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.021847, -0.177929 )
shape = SubResource( 9 )

[node name="Palme4" parent="Props" instance=ExtResource( 6 )]
transform = Transform( 0.364828, -0.032494, 0.930507, 0, 0.99939, 0.0348995, -0.931075, -0.0127323, 0.364606, -25.9741, 0, -6.82904 )

[node name="StaticBody" type="StaticBody" parent="Props/Palme4"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Palme4/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.021847, -0.177929 )
shape = SubResource( 9 )

[node name="Palme5" parent="Props" instance=ExtResource( 6 )]
transform = Transform( -0.866025, -0.0695865, 0.495134, 0, 0.990268, 0.139173, -0.5, 0.120527, -0.857597, -25.9741, 0, 12.2473 )

[node name="StaticBody" type="StaticBody" parent="Props/Palme5"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Palme5/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.021847, -0.177929 )
shape = SubResource( 9 )

[node name="Palme6" parent="Props" instance=ExtResource( 6 )]
transform = Transform( 0.939693, -0.144544, 0.309975, 0, 0.906307, 0.422618, -0.34202, -0.397131, 0.85165, -24.9973, 0, 9.0178 )

[node name="StaticBody" type="StaticBody" parent="Props/Palme6"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Palme6/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.021847, -0.177929 )
shape = SubResource( 9 )

[node name="Rock 01" parent="Props" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.7198, -2.45201, 1.14896 )

[node name="StaticBody" type="StaticBody" parent="Props/Rock 01"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Rock 01/StaticBody"]
shape = SubResource( 12 )

[node name="Rock 03" parent="Props" instance=ExtResource( 12 )]
transform = Transform( 1.92836, 0, 2.29813, 0, 1, 0, -2.29813, 0, 1.92836, -21.9675, -0.437011, -14.109 )

[node name="StaticBody" type="StaticBody" parent="Props/Rock 03"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Rock 03/StaticBody"]
shape = SubResource( 12 )

[node name="Rock 04" parent="Props" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -24.7267, -0.408428, 0 )

[node name="StaticBody" type="StaticBody" parent="Props/Rock 04"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Rock 04/StaticBody"]
shape = SubResource( 12 )

[node name="Rock 05" parent="Props" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.7413, 0, -16.7064 )

[node name="StaticBody" type="StaticBody" parent="Props/Rock 05"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Rock 05/StaticBody"]
shape = SubResource( 12 )

[node name="Rock 06" parent="Props" instance=ExtResource( 12 )]
transform = Transform( 0.173648, 0, 0.984808, 0, 1, 0, -0.984808, 0, 0.173648, -12.0261, -0.579656, -17.2779 )

[node name="StaticBody" type="StaticBody" parent="Props/Rock 06"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Rock 06/StaticBody"]
shape = SubResource( 12 )

[node name="Rock 07" parent="Props" instance=ExtResource( 12 )]
transform = Transform( 3.83022, 0, 1.28558, 0, 2, 0, -3.21394, 0, 1.53209, 6.68135, -1.55046, 25.216 )

[node name="StaticBody" type="StaticBody" parent="Props/Rock 07"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Rock 07/StaticBody"]
shape = SubResource( 12 )

[node name="Rock 08" parent="Props" instance=ExtResource( 12 )]
transform = Transform( 0.984808, 0, 0.173648, 0, 1, 0, -0.173648, 0, 0.984808, 9.47182, -0.437015, 21.2696 )

[node name="StaticBody" type="StaticBody" parent="Props/Rock 08"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Rock 08/StaticBody"]
shape = SubResource( 12 )

[node name="Rock 09" parent="Props" instance=ExtResource( 12 )]
transform = Transform( 0.965926, 0, 0.258819, 0, 1, 0, -0.258819, 0, 0.965926, -6.5289, -1.21027, -21.1053 )

[node name="StaticBody" type="StaticBody" parent="Props/Rock 09"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Rock 09/StaticBody"]
shape = SubResource( 12 )

[node name="Palme7" parent="Props" instance=ExtResource( 6 )]
transform = Transform( -0.315136, -0.0827148, 0.945435, 0, 0.996194, 0.0871557, -0.949047, 0.0274659, -0.313936, -10.2078, 0, -19.1773 )

[node name="StaticBody" type="StaticBody" parent="Props/Palme7"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Palme7/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.021847, -0.177929 )
shape = SubResource( 9 )

[node name="Palme8" parent="Props" instance=ExtResource( 6 )]
transform = Transform( 0.364828, -0.193581, 0.910728, 0, 0.978147, 0.207912, -0.931075, -0.075852, 0.356855, 1.52799, -0.196773, 5.81612 )

[node name="StaticBody" type="StaticBody" parent="Props/Palme8"]

[node name="CollisionShape" type="CollisionShape" parent="Props/Palme8/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.021847, -0.177929 )
shape = SubResource( 9 )

[node name="GUI" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.5
margin_top = -37.0
margin_right = 73.5
margin_bottom = 37.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cat" type="Sprite" parent="GUI"]
visible = false
position = Vector2( 85.5946, -33.8591 )
scale = Vector2( 1.00124, 0.982317 )
texture = ExtResource( 9 )

[node name="Fishing" type="Sprite" parent="GUI"]
visible = false
position = Vector2( 84.4054, -29.1022 )
texture = ExtResource( 13 )

[node name="Thanks" type="Label" parent="GUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -253.5
margin_top = -90.1697
margin_right = 253.5
margin_bottom = 84.8303
theme = SubResource( 11 )
text = "That's it!
Thanks for playing"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
